[gd_scene load_steps=7 format=3 uid="uid://c5c3lumclfuxq"]

[ext_resource type="Script" path="res://player/weapons/lightning_bolt.gd" id="1_bgu55"]
[ext_resource type="Texture2D" uid="uid://x7jppsnjljsv" path="res://assets/textures/weapons/lightning_bolt.png" id="1_whyu8"]

[sub_resource type="Animation" id="Animation_k1mg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../LightningBoltSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rdwm5"]
resource_name = "lightning_bolt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../LightningBoltSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qnksf"]
_data = {
"RESET": SubResource("Animation_k1mg7"),
"lightning_bolt": SubResource("Animation_rdwm5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4s3rv"]
size = Vector2(54, 26)

[node name="LightningBolt" type="Area2D" groups=["attack"]]
top_level = true
z_index = 1
collision_layer = 4
collision_mask = 0
script = ExtResource("1_bgu55")

[node name="LightningBoltSprite" type="Sprite2D" parent="."]
position = Vector2(0, -79.25)
scale = Vector2(0.75, 2.54861)
texture = ExtResource("1_whyu8")
hframes = 10

[node name="LightningBoltAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
libraries = {
"": SubResource("AnimationLibrary_qnksf")
}
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_4s3rv")

[connection signal="animation_finished" from="LightningBoltAnimation" to="." method="_on_lightning_bolt_animation_animation_finished"]
